--- a/index.html
+++ b/index.html
@@ -40,21 +40,21 @@
 				<div class="w3-row-padding w3-mobile">
 					<div class="w3-card w3-padding w3-third">
 						<br>
-						<img src="../Bilder/FakeEiffelTower.png" style="width:100%"> <!-- Källa: https://comeflywithme.se/blogg/2024/4-viktiga-saker-att-tanka-pa-nar-du-besoker-eiffeltornet -->
+						<img src="/Bilder/FakeEiffelTower.png" style="width:100%"> <!-- Källa: https://comeflywithme.se/blogg/2024/4-viktiga-saker-att-tanka-pa-nar-du-besoker-eiffeltornet -->
 						<p>
 							Bla bla bla, alla känner igen den här byggnaden
 						</p>
 					</div>
 					<div class="w3-card w3-padding w3-third">
 						<br>
-						<img src="../Bilder/FakeBigBen.png" style="width:100%"> <!-- Källa: https://www.visitlondon.com/things-to-do/sightseeing/london-attraction/big-ben -->
+						<img src="/Bilder/FakeBigBen.png" style="width:100%"> <!-- Källa: https://www.visitlondon.com/things-to-do/sightseeing/london-attraction/big-ben -->
 						<p>
 							Klocka
 						</p>
 					</div>
 					<div class="w3-card w3-padding w3-third">
 						<br>
-						<img src="../Bilder/FakeChurch.jfif" style="width:100%"> <!-- Källa: https://discover.hubpages.com/travel/6-BEAUTIFUL-CHURCHES-TO-VISIT-IN-SPAIN-Holiday-Tour-travel-vacation-place-famous-Europe-Destinations-image-photos -->
+						<img src="/Bilder/FakeChurch.jfif" style="width:100%"> <!-- Källa: https://discover.hubpages.com/travel/6-BEAUTIFUL-CHURCHES-TO-VISIT-IN-SPAIN-Holiday-Tour-travel-vacation-place-famous-Europe-Destinations-image-photos -->
 						<p>
 							Den kändaste kyrkan jag känner till efter Notre Dam
 						</p>
